	* Add srg mappings parser.

v1.0.1:
	* add methods to run in deobfuscated environment.
	* fix errors with inner classes.

v1.0.0:
	* initial release