@@ -19,7 +19,7 @@ dependencies {
 	compile 'org.ow2.asm:asm-debug-all:5.0.3'
 	compile 'org.apache.logging.log4j:log4j-core:2.0-beta9'
 	compile 'org.apache.logging.log4j:log4j-api:2.0-beta9'
-	compile 'com.google.guava:guava:15.0'
+	compile 'com.google.guava:guava:17.0'
 
     testCompile 'junit:junit:4.12'
 }
