@@ -1,8 +1,6 @@
 package com.hea3ven.tools.mappings.parser.srg;
 
 import java.io.*;
-import java.util.ArrayList;
-import java.util.List;
 
 import com.hea3ven.tools.mappings.*;
 
@@ -64,40 +62,7 @@ public class SrgMappingsParser {
 					cls.setDst(dstClsName.split("\\$")[1]);
 				}
 			}
-			mapping.add(new MthdMapping(cls, srcFldName, dstFldName, parseMethodDesc(parts[1])));
+			mapping.add(new MthdMapping(cls, srcFldName, dstFldName, Desc.parse(mapping, parts[1])));
 		}
-	}
-
-	private TypeDesc parseType(String typeData) {
-		TypeDesc typ = BuiltInTypeDesc.get(typeData.charAt(0));
-		if (typ == null) {
-			if (typeData.charAt(0) == '[') {
-				typ = new ArrayTypeDesc(parseType(typeData.substring(1)));
-			} else {
-				typ = new ClsTypeDesc(mapping.getCls(typeData.substring(1, typeData.indexOf(';'))));
-			}
-		}
-		return typ;
-	}
-
-	private Desc parseMethodDesc(String descData) {
-		if (descData.charAt(0) != '(')
-			throw new SrgParserException("invalid method desc " + descData);
-		int i = 1;
-		List<TypeDesc> params = new ArrayList<TypeDesc>();
-		while (descData.charAt(i) != ')') {
-			params.add(parseType(descData.substring(i)));
-			i += typeDescLenght(descData.substring(i));
-		}
-
-		return new Desc(parseType(descData.substring(i + 1)), params.toArray(new TypeDesc[0]));
-	}
-
-	private int typeDescLenght(String typeData) {
-		if (BuiltInTypeDesc.get(typeData.charAt(0)) != null)
-			return 1;
-		if (typeData.charAt(0) == '[')
-			return 1;
-		return typeData.indexOf(';') + 1;
 	}
 }
